# nitro-gacha

./: .gitignore  Cargo.toml  README.md  hardhat.config.ts  package-lock.json  package.json
contracts/: MyToken.sol
contracts/@openzeppelin/contracts/token/ERC721/: ERC721.sol
scripts/: safemint.ts
solidity/contracts/: MyToken.sol
src/: main.rs
stylus/: Cargo.toml
stylus/scripts/: safemint.sh
stylus/src/: main.rs
